# pluginscor

./: AUTHORS  Makefile.am  Makefile.in  README.md  TODO  configure  configure.ac
ccds/: Makefile.am  Makefile.in
ccds/audine/: Makefile.am  Makefile.in  audine.cpp  audine.h  audine1.xml  audine2.xml  chip.cpp  chip.h  fitshead.cpp  fitshead.h  imagseq.cpp  imagseq.h  perscount.h  shutter.cpp  shutter.h  state.cpp  state.h  storage.cpp  storage.h
hubs/: Makefile.am  Makefile.in
hubs/cor/: Makefile.am  Makefile.in  cor.cpp  cor.h  cor.xml  state.cpp  state.h
power/: Makefile.in
power/cor/: Makefile.am  Makefile.in  corpower.cpp  corpower.h  corpower.xml  powercmd.cpp  powercmd.h
scopes/: Makefile.am  Makefile.in
scopes/lx200/: Makefile.am  Makefile.in  basiccmd.cpp  basiccmd.h  lx200.cpp  lx200.h  lx200cmd.cpp  lx200cmd.h  lx200simple.xml
scopes/trackscope/: Makefile.am  Makefile.in  trackscope.cpp  trackscope.h  trackscope.xml
weather/: Makefile.am  Makefile.in
weather/meteo/: Makefile.am  Makefile.in  meteo.xml
